# CPP-Engineering-Scaffolding

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  coverage.sh  test.sh  test.txt  test_detail.xml
.github/workflows/: cmake.yml  msvc.yml
3rd/: README.md
bench/: README.md
doc/: README.md  cmocka_usage_cn.md
example/: README.md
include/: README.md
src/: README.md  main.cpp  write_file.c  write_file.h
test/: CMakeLists.txt  fib_test.cpp  main.cpp  sys_mock.cpp  sys_mock.h  test.h  unit_test  write_file_test.c  write_file_test.cpp
